# cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SKILL.md
.github/workflows/: release-plz.yml  release.yml
docs/: vault-repo-spec.md
scripts/: install.sh
src/: cli.rs  config.rs  error.rs  exec.rs  http.rs  inventory.rs  main.rs  output.rs  search.rs  test_env.rs
src/registry/: git.rs  mod.rs
src/vault/: frontmatter.rs  mod.rs  resolver.rs
templates/: generic_component.md  metadata.md  parameter.md  response.md  route.md  schema.md  type.md
tests/fixtures/: complex.json  openapi31_minimal.json  petstore.json  petstore_auth.json  tags.json
