[package]
name = "apix-cli"
version = "0.1.4"
edition = "2024"
description = "API explorer CLI for AI agents and humans – search, browse, and execute APIs from your terminal"
license = "MIT"
repository = "https://github.com/apix-sh/cli"
keywords = ["api", "cli", "openapi", "agent", "local-first"]

[[bin]]
name = "apix"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
openapiv3 = "2"
askama = "0.12"
ureq = { version = "2", features = ["json"] }
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
ignore = "0.4"
dirs = "5"
toml = "0.8"
thiserror = "2"
colored = "2"
termimad = "0.30"
clap_complete = "4"
regex = "1"
url = "2"
indexmap = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"

[dev-dependencies]
serial_test = "3"
mockito = "1"

strip-ansi-escapes = "0.2.1"
